rationalise ejs files with includes, add help system and overview

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "*",
     "less-middleware": "*",
     "mongojs":"*",
-    "qrcode-npm": "*"
+    "qrcode-npm": "*",
+    "marked" : "*"
+    
   }
 }
